[gd_scene load_steps=2 format=3 uid="uid://bsuoxglh1g2ow"]

[ext_resource type="Script" path="res://addons/event_sheet/ui/event_sheet_ui.gd" id="1"]

[node name="EventSheetUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
separation = 5
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
separation = 5

[node name="AddEventButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Add Event"

[node name="AddSubEventButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Add Sub-Event"

[node name="AddGroupButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Add Group"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Delete"

[node name="DuplicateButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Duplicate"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 0

[node name="EventsListPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)

[node name="SearchContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/EventsListPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 35)

[node name="SearchField" type="LineEdit" parent="VBoxContainer/HSplitContainer/EventsListPanel/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search events..."

[node name="ClearButton" type="Button" parent="VBoxContainer/HSplitContainer/EventsListPanel/SearchContainer"]
layout_mode = 2
custom_minimum_size = Vector2(35, 0)
text = "X"
tooltip_text = "Clear search"

[node name="EventsLabel" type="Label" parent="VBoxContainer/HSplitContainer/EventsListPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)
text = "Events"
vertical_alignment = 1

[node name="EventsList" type="ItemList" parent="VBoxContainer/HSplitContainer/EventsListPanel"]
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="MainEditorPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer/MainEditorPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConditionsPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConditionsHeader" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ConditionsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ConditionsLabel" type="Label" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ConditionsPanel/ConditionsHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Conditions"
vertical_alignment = 1

[node name="AddConditionButton" type="Button" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ConditionsPanel/ConditionsHeader"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "+"
tooltip_text = "Add condition"

[node name="ConditionsTree" type="Tree" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ConditionsPanel"]
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="ActionsPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsHeader" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ActionsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ActionsLabel" type="Label" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ActionsPanel/ActionsHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Actions"
vertical_alignment = 1

[node name="AddActionButton" type="Button" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ActionsPanel/ActionsHeader"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "+"
tooltip_text = "Add action"

[node name="ActionsTree" type="Tree" parent="VBoxContainer/HSplitContainer/MainEditorPanel/HSplitContainer/ActionsPanel"]
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
